<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/googlelogo"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:srcCompat="@drawable/googlelogo"
        android:layout_margin="30dp"
        tools:layout_editor_absoluteX="142dp"
        tools:layout_editor_absoluteY="428dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_google_acount"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/googlelogo"
        app:layout_constraintStart_toStartOf="@id/googlelogo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstName"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="@id/googlelogo"
        app:layout_constraintTop_toBottomOf="@+id/title">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="20sp"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastName"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toEndOf="@id/firstName"
        app:layout_constraintTop_toBottomOf="@+id/title">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="20sp"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="@id/googlelogo"
        app:layout_constraintTop_toBottomOf="@+id/firstName">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginStart="30sp"
            android:layout_marginEnd="20sp"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/clarification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_can_use_letters_numbers_amp_periods"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintStart_toStartOf="@id/googlelogo" />

    <TextView
        android:id="@+id/link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/use_current_email"
        android:textSize="17sp"
        android:textColor="@color/blue"
        app:layout_constraintTop_toBottomOf="@+id/clarification"
        app:layout_constraintStart_toStartOf="@id/googlelogo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="@id/googlelogo"
        app:layout_constraintTop_toBottomOf="@+id/link">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:layout_marginEnd="20sp"
            android:textSize="15sp"
            android:inputType="numberPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toEndOf="@id/password"
        app:layout_constraintTop_toBottomOf="@+id/link">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:layout_marginEnd="20sp"
            android:textSize="15sp"
            android:inputType="numberPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/clarificationpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pass_info"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintStart_toStartOf="@id/googlelogo" />

    <RadioButton
        android:id="@+id/showpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_password"
        android:layout_marginTop="10sp"
        android:button="@drawable/squareicon"
        app:layout_constraintTop_toBottomOf="@+id/clarificationpass"
        app:layout_constraintStart_toStartOf="@id/googlelogo"/>

    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_instead"
        android:textSize="15sp"
        android:textColor="@color/blue"
        android:layout_marginTop="50sp"
        app:layout_constraintTop_toBottomOf="@+id/showpass"
        app:layout_constraintStart_toStartOf="@id/googlelogo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginTop="40sp"
        android:layout_marginStart="160sp"
        app:layout_constraintTop_toBottomOf="@+id/showpass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/signin"/>
</androidx.constraintlayout.widget.ConstraintLayout>